Fixed category text alignment

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -102,6 +102,13 @@ border-radius:4px;
        -webkit-animation: fadein .5s; /* Safari and Chrome */
        -o-animation: fadein .5s; /* Opera */
 }
+.active-result.group-option{
+  text-align:left;
+}
+.group-result{
+  text-align:left;
+  font-size:12px;
+}
 @keyframes fadein {
     from {
         opacity:0;
